syntax = "proto3";
package nova.communication.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// ============================================================================
// Communication Service - Messaging & Notifications
//
// Replaces: messaging-service + notification-service
//
// Owns: conversations, messages, message_status, notifications,
//       email_queue, sms_queue, push_tokens
//
// Responsibilities:
//   - Real-time messaging (WebSocket)
//   - Message delivery and status tracking
//   - Push notifications (FCM, APNs)
//   - Email notifications
//   - SMS notifications
//   - Notification preferences
//
// Why merged: messaging and notifications are tightly coupled.
// A message creates a notification. They share delivery infrastructure.
// ============================================================================

service CommunicationService {
  // ========== Conversations ==========
  rpc CreateConversation(CreateConversationRequest) returns (CreateConversationResponse);
  rpc GetConversation(GetConversationRequest) returns (GetConversationResponse);
  rpc ListConversations(ListConversationsRequest) returns (ListConversationsResponse);
  rpc DeleteConversation(DeleteConversationRequest) returns (google.protobuf.Empty);

  // ========== Messages ==========
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
  rpc MarkMessageRead(MarkMessageReadRequest) returns (google.protobuf.Empty);
  rpc DeleteMessage(DeleteMessageRequest) returns (google.protobuf.Empty);
  rpc EditMessage(EditMessageRequest) returns (EditMessageResponse);

  // ========== Real-time ==========
  rpc StreamMessages(StreamMessagesRequest) returns (stream MessageEvent);  // WebSocket alternative

  // ========== Notifications ==========
  rpc SendNotification(SendNotificationRequest) returns (google.protobuf.Empty);
  rpc GetNotifications(GetNotificationsRequest) returns (GetNotificationsResponse);
  rpc MarkNotificationRead(MarkNotificationReadRequest) returns (google.protobuf.Empty);
  rpc MarkAllNotificationsRead(MarkAllNotificationsReadRequest) returns (google.protobuf.Empty);
  rpc DeleteNotification(DeleteNotificationRequest) returns (google.protobuf.Empty);

  // ========== Push Tokens ==========
  rpc RegisterPushToken(RegisterPushTokenRequest) returns (google.protobuf.Empty);
  rpc UnregisterPushToken(UnregisterPushTokenRequest) returns (google.protobuf.Empty);

  // ========== Notification Preferences ==========
  rpc GetNotificationPreferences(GetNotificationPreferencesRequest) returns (GetNotificationPreferencesResponse);
  rpc UpdateNotificationPreferences(UpdateNotificationPreferencesRequest) returns (google.protobuf.Empty);
}

// ============================================================================
// Messages - Messaging Domain
// ============================================================================

// -------- Conversation Model --------
message Conversation {
  string id = 1;
  ConversationType type = 2;
  repeated string participant_ids = 3;
  string name = 4;                // Optional, for group chats
  string avatar_url = 5;          // Optional, for group chats
  string last_message_id = 6;
  string last_message_text = 7;
  google.protobuf.Timestamp last_message_at = 8;
  int32 unread_count = 9;         // Per user
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

enum ConversationType {
  CONVERSATION_TYPE_UNSPECIFIED = 0;
  CONVERSATION_TYPE_DIRECT = 1;   // 1-on-1
  CONVERSATION_TYPE_GROUP = 2;    // Multi-user
}

// -------- Message Model --------
message Message {
  string id = 1;
  string conversation_id = 2;
  string sender_id = 3;
  MessageType type = 4;
  string content = 5;             // Text content
  repeated string media_ids = 6;  // Attached media
  string reply_to_id = 7;         // Reply to message ID
  MessageStatus status = 8;
  bool is_edited = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
  google.protobuf.Timestamp deleted_at = 12;
}

enum MessageType {
  MESSAGE_TYPE_UNSPECIFIED = 0;
  MESSAGE_TYPE_TEXT = 1;
  MESSAGE_TYPE_IMAGE = 2;
  MESSAGE_TYPE_VIDEO = 3;
  MESSAGE_TYPE_AUDIO = 4;
  MESSAGE_TYPE_FILE = 5;
  MESSAGE_TYPE_SYSTEM = 6;        // System messages (user joined, etc.)
}

enum MessageStatus {
  MESSAGE_STATUS_UNSPECIFIED = 0;
  MESSAGE_STATUS_SENDING = 1;
  MESSAGE_STATUS_SENT = 2;
  MESSAGE_STATUS_DELIVERED = 3;
  MESSAGE_STATUS_READ = 4;
  MESSAGE_STATUS_FAILED = 5;
}

// -------- Create Conversation --------
message CreateConversationRequest {
  ConversationType type = 1;
  repeated string participant_ids = 2;
  string name = 3;                // Optional, for groups
}

message CreateConversationResponse {
  Conversation conversation = 1;
}

// -------- Get Conversation --------
message GetConversationRequest {
  string conversation_id = 1;
}

message GetConversationResponse {
  Conversation conversation = 1;
}

// -------- List Conversations --------
message ListConversationsRequest {
  string user_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message ListConversationsResponse {
  repeated Conversation conversations = 1;
  int32 total_count = 2;
  bool has_more = 3;
}

// -------- Delete Conversation --------
message DeleteConversationRequest {
  string conversation_id = 1;
  string user_id = 2;
}

// -------- Send Message --------
message SendMessageRequest {
  string conversation_id = 1;
  string sender_id = 2;
  MessageType type = 3;
  string content = 4;
  repeated string media_ids = 5;
  string reply_to_id = 6;
}

message SendMessageResponse {
  Message message = 1;
}

// -------- Get Messages --------
message GetMessagesRequest {
  string conversation_id = 1;
  int32 limit = 2;
  string cursor = 3;              // Cursor-based pagination
}

message GetMessagesResponse {
  repeated Message messages = 1;
  string next_cursor = 2;
  bool has_more = 3;
}

// -------- Mark Message Read --------
message MarkMessageReadRequest {
  string message_id = 1;
  string user_id = 2;
}

// -------- Delete Message --------
message DeleteMessageRequest {
  string message_id = 1;
  string user_id = 2;
}

// -------- Edit Message --------
message EditMessageRequest {
  string message_id = 1;
  string user_id = 2;
  string new_content = 3;
}

message EditMessageResponse {
  Message message = 1;
}

// -------- Stream Messages (WebSocket alternative) --------
message StreamMessagesRequest {
  string user_id = 1;
  repeated string conversation_ids = 2;  // Filter by conversations
}

message MessageEvent {
  MessageEventType event_type = 1;
  Message message = 2;
  string conversation_id = 3;
  google.protobuf.Timestamp timestamp = 4;
}

enum MessageEventType {
  MESSAGE_EVENT_TYPE_UNSPECIFIED = 0;
  MESSAGE_EVENT_TYPE_NEW_MESSAGE = 1;
  MESSAGE_EVENT_TYPE_MESSAGE_EDITED = 2;
  MESSAGE_EVENT_TYPE_MESSAGE_DELETED = 3;
  MESSAGE_EVENT_TYPE_MESSAGE_READ = 4;
  MESSAGE_EVENT_TYPE_TYPING = 5;
}

// ============================================================================
// Messages - Notification Domain
// ============================================================================

// -------- Notification Model --------
message Notification {
  string id = 1;
  string user_id = 2;             // Recipient
  NotificationType type = 3;
  string title = 4;
  string body = 5;
  string icon_url = 6;
  string action_url = 7;          // Deep link URL
  map<string, string> data = 8;   // Custom data
  bool is_read = 9;
  NotificationChannel channel = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp read_at = 12;
}

enum NotificationType {
  NOTIFICATION_TYPE_UNSPECIFIED = 0;
  NOTIFICATION_TYPE_LIKE = 1;
  NOTIFICATION_TYPE_COMMENT = 2;
  NOTIFICATION_TYPE_FOLLOW = 3;
  NOTIFICATION_TYPE_MENTION = 4;
  NOTIFICATION_TYPE_MESSAGE = 5;
  NOTIFICATION_TYPE_SYSTEM = 6;
}

enum NotificationChannel {
  NOTIFICATION_CHANNEL_UNSPECIFIED = 0;
  NOTIFICATION_CHANNEL_IN_APP = 1;
  NOTIFICATION_CHANNEL_PUSH = 2;
  NOTIFICATION_CHANNEL_EMAIL = 3;
  NOTIFICATION_CHANNEL_SMS = 4;
}

// -------- Send Notification --------
message SendNotificationRequest {
  string user_id = 1;
  NotificationType type = 2;
  string title = 3;
  string body = 4;
  string icon_url = 5;
  string action_url = 6;
  map<string, string> data = 7;
  repeated NotificationChannel channels = 8;  // Multi-channel delivery
}

// -------- Get Notifications --------
message GetNotificationsRequest {
  string user_id = 1;
  int32 limit = 2;
  int32 offset = 3;
  NotificationType type = 4;      // Optional filter
  bool unread_only = 5;
}

message GetNotificationsResponse {
  repeated Notification notifications = 1;
  int32 total_count = 2;
  int32 unread_count = 3;
  bool has_more = 4;
}

// -------- Mark Notification Read --------
message MarkNotificationReadRequest {
  string notification_id = 1;
}

// -------- Mark All Notifications Read --------
message MarkAllNotificationsReadRequest {
  string user_id = 1;
}

// -------- Delete Notification --------
message DeleteNotificationRequest {
  string notification_id = 1;
}

// -------- Push Token Registration --------
message RegisterPushTokenRequest {
  string user_id = 1;
  string token = 2;               // FCM/APNs token
  PushPlatform platform = 3;
  string device_id = 4;
}

enum PushPlatform {
  PUSH_PLATFORM_UNSPECIFIED = 0;
  PUSH_PLATFORM_FCM = 1;          // Firebase Cloud Messaging (Android)
  PUSH_PLATFORM_APNS = 2;         // Apple Push Notification Service (iOS)
  PUSH_PLATFORM_WEB = 3;          // Web Push
}

message UnregisterPushTokenRequest {
  string user_id = 1;
  string token = 2;
}

// -------- Notification Preferences --------
message GetNotificationPreferencesRequest {
  string user_id = 1;
}

message NotificationPreferences {
  string user_id = 1;
  bool push_enabled = 2;
  bool email_enabled = 3;
  bool sms_enabled = 4;

  // Per-type preferences
  bool notify_on_like = 5;
  bool notify_on_comment = 6;
  bool notify_on_follow = 7;
  bool notify_on_mention = 8;
  bool notify_on_message = 9;

  // Quiet hours
  bool enable_quiet_hours = 10;
  int32 quiet_hours_start = 11;  // Hour (0-23)
  int32 quiet_hours_end = 12;    // Hour (0-23)
}

message GetNotificationPreferencesResponse {
  NotificationPreferences preferences = 1;
}

message UpdateNotificationPreferencesRequest {
  NotificationPreferences preferences = 1;
}

// ============================================================================
// Events Published by Communication Service
// ============================================================================

// Kafka Topic: communication.message.sent
message MessageSentEvent {
  string message_id = 1;
  string conversation_id = 2;
  string sender_id = 3;
  repeated string recipient_ids = 4;
  MessageType type = 5;
  google.protobuf.Timestamp sent_at = 6;
}

// Kafka Topic: communication.notification.sent
message NotificationSentEvent {
  string notification_id = 1;
  string user_id = 2;
  NotificationType type = 3;
  repeated NotificationChannel channels = 4;
  google.protobuf.Timestamp sent_at = 5;
}
